<resources>
    <string name="app_name">My Application</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="e_mail_student_no">E-mail/Student no.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="phinma_upang_college_of_urdaneta">PHINMA UPANG COLLEGE OF URDANETA</string>
    <string name="email">Email</string>
    <string name="campus">Campus</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="location_mcarthur_highway_urdaneta_city_2428_pangasinan">Location: McArthur Highway, Urdaneta City, 2428, Pangasinan</string>
    <string name="view_school_map">View School map</string>
</resources>