<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/upangloginbg"
    android:textAlignment="center">

    <ImageView
        android:id="@+id/pucu_logo"
        android:layout_width="177dp"
        android:layout_height="162dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175"
        app:srcCompat="@drawable/puculogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="334dp"
        android:layout_height="55dp"
        android:fontFamily="@font/koh_santepheap_bold"
        android:text="@string/phinma_upang_college_of_urdaneta"
        android:textAlignment="center"
        android:textColor="#020202"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/enteremail"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:hint="@string/e_mail_student_no"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterpassword"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="#3A4F26"
        android:fontFamily="@font/koh_santepheap_bold"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enteremail"
        app:layout_constraintVertical_bias="0.025" />



</androidx.constraintlayout.widget.ConstraintLayout>


