<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/upangloginbg"
    tools:context=".profile_page">

    <EditText
        android:id="@+id/name"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:fontFamily="@font/koh_santepheap_bold"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <EditText
        android:id="@+id/email"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:fontFamily="@font/koh_santepheap_bold"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/birth"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:fontFamily="@font/koh_santepheap_bold"
        android:hint="@string/date_of_birth"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:fontFamily="@font/koh_santepheap_bold"
        android:hint="@string/phone_number"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/Campus"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:fontFamily="@font/koh_santepheap_bold"
        android:hint="@string/campus"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803"
        tools:ignore="TextFields" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144"
        app:srcCompat="@drawable/rectangle2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="165dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/inigo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:fontFamily="@font/koh_santepheap"
        android:text="Gabriel Inigo A. Simon"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:fontFamily="@font/koh_santepheap"
        android:text="Bachelor of Science in Computer Science"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:fontFamily="@font/koh_santepheap"
        android:text="03-1920-02023"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="#3A4F26"

        android:fontFamily="@font/koh_santepheap_bold"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="40dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/scholarbtnprofilesection"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:foreground="@drawable/scholarbtn"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <Button
        android:id="@+id/profilebuttonprofsec"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:foreground="@drawable/profilebtn"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <Button
        android:id="@+id/mapbtn1"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:foreground="@drawable/mapbtn"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <Button
        android:id="@+id/modalitybtnprofilesection"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:foreground="@drawable/modalitybtn"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />


</androidx.constraintlayout.widget.ConstraintLayout>